# blokator

./: .gitignore  .woodpecker.yml  Cargo.toml  LICENSE  Makefile  README.md  build-appimage.sh  replace-string.sh  update-version.sh
archlinux-pkgbuild/: PKGBUILD  blokator-0.1.0-1-x86_64.pkg.tar.zst  update-aur.sh
archlinux-pkgbuild/blokator/: FETCH_HEAD  config  packed-refs
archlinux-pkgbuild/blokator/objects/pack/: pack-0afb86d0c20ae2d8e3d657c1e7c775c09e24003a.idx  pack-0afb86d0c20ae2d8e3d657c1e7c775c09e24003a.pack
archlinux-pkgbuild/pkg/blokator/: .BUILDINFO  .MTREE  .PKGINFO
man-pages/: blokator
src/: allowed_exit_functions.rs  apply.rs  arguments.rs  backup.rs  colors.rs  commands.rs  config.rs  copy.rs  error.rs  handle_permissions.rs  initialize_colors.rs  initialize_dirs.rs  logging.rs  main.rs  messages.rs  read.rs  repos.rs  restore.rs  signal_handling.rs  sync.rs  tor.rs  windows.rs  write.rs
src/actions/: add_repo.rs  add_repo_preset.rs  apply.rs  apply_android.rs  backup.rs  del_repo.rs  del_repo_preset.rs  list_devices.rs  list_repos.rs  mod.rs  restore.rs  restore_android.rs  sync.rs
src/android/: apply.rs  checks.rs  list.rs  mod.rs  restore.rs
src/messages/: messages.toml
src/presets/: mod.rs  preset.rs  presets.rs  presets.toml
src/services/: init.rs  mod.rs  networkmanager.rs  openrc.rs  runit.rs  s6.rs  systemd.rs
src/systemd/: mod.rs  networkmanager.rs
