[package]
name = "blokator"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"

[dependencies]
clap = { version = "3.2.17", default-features = false, features = ["std", "derive"] }
dirs = { version = "4.0.0", default-features = false }
nix = { version = "0.25.0" }
reqwest = { version = "0.11.11", features = ["blocking", "socks"] }

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3.8", features = ["winuser", "handleapi", "processthreadsapi", "securitybaseapi"]}
libc = "0.2.66"
